# ruspell

./: Cargo.toml  README.md  clippy.toml  flake.nix  package.nix
src/: aff.rs  dic.rs  dictionary.rs  lib.rs  lookup.rs  main.rs  suggest.rs  trie.rs  utils.rs
tests/: alias.rs  allcaps.rs  base.aff  base.rs  base_unicode.aff  base_unicode.rs  fullstrip.rs  utils.rs
