[package]
name = "ruspell"
version = "0.0.0"
edition = "2021"

description = "A port of Hunspell to Rust"
repository = "https://github.com/mrnossiom/ruspell"
license = "CECILL-2.1"

[dependencies]
log = { version = "0.4.21", features = ["release_max_level_off"] }
nom = "7.1.3"
nom-supreme = "0.8.0"
pretty_env_logger = "0.5.0"
regex = "1.10.4"
thiserror = "1.0.58"

[features]
default = []
fully_evaluate = []

[lints]
[lints.rust]
dead_code = { level = "allow", priority = 1 }
[lints.clippy]
nursery = "warn"
pedantic = "warn"
cargo = "warn"

missing_docs = "warn"
dbg_macro = "warn"
missing_docs_in_private_items = "warn"
todo = "warn"
unwrap_used = "warn"

redundant_pub_crate = { level = "allow", priority = 1 }
[lints.rustdoc]
all = "warn"
